Mon May 17 23:40:00 BST 1999
	- PG_Stream.close() now attempts to send the close connection message
	  to the backend before closing the streams
	- Added batch support in the JDBC2, supplied by Yutaka Tanida <yutaka@marin.or.jp>
	- Removed the old datestyle code. Now the driver uses only ISO.
	- Removed some files in the postgresql directory still in CVS that were
	  moved since 6.4.x (DatabaseMetaData.java PreparedStatement.java
	  ResultSetMetaData.java Statement.java)
	- Internationalisation of the error messages is partially implemented, however
	  it's not enabled as it only works when the jar file is _not_ used, and
	  work needs to be done.

Sun Apr 11 17:00:00 BST 1999
	- getUpdateCount() now returns the actual update count (before it
	  simply returned 1 for everything).
	- added some updates to example.basic so it would test the new update
	  count code.
	- corrected typo in a comment in Statement.java

Mon Jan 25 19:45:00 GMT 1999
	- created subfolders example/corba and example/corba/idl to hold the
	  new example showing how to hook CORBA and PostgreSQL via JDBC
	- implemented some JDBC2 methods curtesy of Joachim.Gabler@t-online.de

Sat Jan 23 10:30:00 GMT 1999
	- Changed imports in postgresql.jdbc1.ResultSetMetaData as for some
	  reason it didn't want to compile under jdk1.1.6

Tue Dec 29 15:45:00 GMT 1998
	- Refreshed the README (which was way out of date)

Tue Dec 29 15:45:00 GMT 1998
	- Finished adding the additional methods into the JDBC2 driver.
	- Had to add some explicit package references for the JDK1.2 Javac to
	  cope with the driver

Tue Dec 29 12:40:00 GMT 1998
	- Fixed package imports and some references to java.sql.ResultSet in
	  various files. Compiled and tested the JDBC1 driver.

Mon Dec 28 19:01:37 GMT 1998
	- created a new package postgresql.jdbc2 which will contain the JDBC 2
	  specific classes. A similar new package (postgresql.jdbc1) has been
	  created to hold the JDBC 1 specific classes.